lua: update command-line options
Attention: Patch contains a breaking change - it changes default
behaviour in tarantool: by default tarantool command prints usage and
don't run a Lua interpeter.

Proposed patch:

- updates regression tests that were broken due to breaking change
- updates cli options in manual page

1. https://github.com/tarantool/conf

Closes #XXXX

@TarantoolBot document
Title: update command-line options

Previously tarantool entered to interactive mode by starting Lua
interpreter. Now 'tarantool' command prints a usage and don't run a Lua
interpeter. Three new optins added: --name (-n) and --config (-c),
--script.

--- a/doc/man/tarantool.pod
+++ b/doc/man/tarantool.pod
@@ -104,6 +104,18 @@ name:
 
 =over
 
+=item -c, --config
+
+Set a path to a config file.
+
+=item -n, --name
+
+Set an instance name.
+
+=item -s, --script
+
+Set a path to a Lua script file.
+
 =item -h, --help
 
 Display the help screen and exit.
