main: introduce an option --repl
Part of #8612

NO_CHANGELOG=todo
NO_DOC=todo
NO_TEST=todo

--- a/doc/man/tarantool.pod
+++ b/doc/man/tarantool.pod
@@ -136,6 +136,10 @@ Activate debugging session for a script.
 
 Enter the interactive mode after executing 'SCRIPT'.
 
+=item -r
+
+Enter the interactive mode after executing 'SCRIPT'.
+
 =item --
 
 Stop handling options.
